[gd_scene load_steps=4 format=3 uid="uid://d2ctjy5f51bgx"]

[ext_resource type="Script" path="res://scenes/ui/crafting_dialog/crafting_dialog.gd" id="1_ugywv"]
[ext_resource type="PackedScene" uid="uid://ipwdnh2thwcy" path="res://scenes/ui/item_grid/item_grid.tscn" id="2_ounui"]
[ext_resource type="PackedScene" uid="uid://b8ubpugsly5cp" path="res://scenes/ui/item_slot/item_slot.tscn" id="2_pvd5c"]

[node name="CraftingDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugywv")
slot_scene = ExtResource("2_pvd5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "合成"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "配方"

[node name="RecipeList" type="ItemList" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "材料"

[node name="IngredientsContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource("2_ounui")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "合成"

[node name="ResultsContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource("2_ounui")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "合成"
